--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,9 @@
 <!--        app:layout_constraintRight_toRightOf="parent"-->
 <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
+     <Button
+         android:id="@+id/buttonGotoPage100"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="Button to goto page 100"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
