--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Hello World!"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
      <Button
          android:id="@+id/buttonGotoPage100"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Button to goto page 100"/>
+
+     <Button
+         android:id="@+id/button3"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="ConnectionREq"
+         android:onClick="pairDevice"
+         android:layout_marginStart="34dp"
+         tools:layout_constraintTop_creator="1"
+         tools:layout_constraintBottom_creator="1"
+         app:layout_constraintBottom_toBottomOf="@+id/buttonGotoPage100"
+         tools:layout_constraintLeft_creator="1"
+         app:layout_constraintLeft_toLeftOf="parent"
+         android:layout_marginLeft="30dp"
+         app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
