Created a ListView, but it overlaps activity_main and it does not show up with the clickable info.  Need to practice more on creating and navigating between views.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,4 +32,9 @@
          android:layout_marginLeft="30dp"
          app:layout_constraintVertical_bias="0.0" />
 
+     <ListView
+         android:id="@+id/listViewBluetoothDevices"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         />
 </androidx.constraintlayout.widget.ConstraintLayout>
