--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,9 +32,68 @@
          android:layout_marginLeft="30dp"
          app:layout_constraintVertical_bias="0.0" />
 
-     <ListView
-         android:id="@+id/listViewBluetoothDevices"
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         />
+     <Button
+         android:id="@+id/button2"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="Server"
+         android:onClick="Start_Server"
+         android:layout_marginEnd="53dp"
+         tools:layout_constraintRight_creator="1"
+         tools:layout_constraintBottom_creator="1"
+         app:layout_constraintBottom_toBottomOf="parent"
+         app:layout_constraintRight_toRightOf="parent"
+         android:layout_marginBottom="84dp"
+         android:layout_marginRight="53dp" />
+
+     <Button
+         android:id="@+id/button"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="SendMessage to next Tablet"
+         android:onClick="SendMessage"
+         tools:layout_constraintTop_creator="1"
+         tools:layout_constraintRight_creator="1"
+         app:layout_constraintRight_toRightOf="parent"
+         android:layout_marginTop="22dp"
+         app:layout_constraintTop_toBottomOf="@+id/editText"
+         tools:layout_constraintLeft_creator="1"
+         app:layout_constraintLeft_toLeftOf="parent"
+         android:background="#147D03" />
+
+     <EditText
+         android:id="@+id/editText"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:ems="10"
+         android:inputType="textPersonName"
+         android:text="Name"
+         tools:layout_constraintTop_creator="1"
+         tools:layout_constraintRight_creator="1"
+         app:layout_constraintRight_toRightOf="parent"
+         android:layout_marginTop="153dp"
+         tools:layout_constraintLeft_creator="1"
+         app:layout_constraintLeft_toLeftOf="parent"
+         app:layout_constraintTop_toTopOf="parent"
+         android:background="#147D03" />
+
+     <TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="Hello World!"
+         android:id="@+id/textView"
+         tools:layout_constraintTop_creator="1"
+         tools:layout_constraintRight_creator="1"
+         app:layout_constraintRight_toRightOf="parent"
+         android:layout_marginTop="58dp"
+         tools:layout_constraintLeft_creator="1"
+         app:layout_constraintLeft_toLeftOf="parent"
+         app:layout_constraintTop_toTopOf="parent"
+         android:background="#147D03" />
+
+<!--     <ListView-->
+<!--         android:id="@+id/listViewBluetoothDevices"-->
+<!--         android:layout_width="match_parent"-->
+<!--         android:layout_height="match_parent"-->
+<!--         />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
